# Jitu

./: .gitignore  build.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
javastubs/: .gitignore  build.gradle
javastubs/src/main/: AndroidManifest.xml
javastubs/src/main/java/java/awt/: Canvas.java  Color.java  Component.java  Container.java  Dimension.java  FlowLayout.java  Frame.java  Graphics.java  Image.java  ItemSelectable.java  LayoutManager.java  Panel.java  Point.java  Rectangle.java  Window.java
javastubs/src/main/java/java/awt/event/: AWTEvent.java  ActionEvent.java  ActionListener.java  ComponentAdapter.java  ComponentEvent.java  ComponentListener.java  ContainerEvent.java  ContainerListener.java  HierarchyListener.java  ItemEvent.java  ItemListener.java  KeyEvent.java  KeyListener.java  MouseEvent.java  WindowEvent.java  WindowListener.java
javastubs/src/main/java/java/awt/image/: BufferedImage.java  DataBuffer.java  DataBufferByte.java  DataBufferInt.java  DataBufferUShort.java  ImageObserver.java  ImagingOpException.java  Raster.java  WritableRaster.java
javastubs/src/main/java/java/beans/: PropertyDescriptor.java  PropertyEditor.java
javastubs/src/main/java/javax/sound/sampled/: AudioFormat.java  AudioInputStream.java  AudioSystem.java  Control.java  UnsupportedAudioFileException.java
javastubs/src/main/java/javax/swing/: Icon.java  ImageIcon.java  JComponent.java  JLabel.java  JMenuItem.java  JPanel.java  SwingUtilities.java
javastubs/src/main/java/javax/swing/event/: CaretListener.java  DocumentListener.java
javastubs/src/main/java/javax/swing/filechooser/: FileSystemView.java
javastubs/src/main/java/javax/swing/text/: Highlighter.java
jitsiandroid/: build.gradle
jitsiandroid/src/main/: AndroidManifest.xml
jitsiandroid/src/main/java/org/jitsi/android/: JitsiApplication.java
jitsiandroid/src/main/java/org/jitsi/examples/: AVReceive2.java
jitsiandroid/src/main/java/org/jitsi/impl/neomedia/codec/video/: AndroidDecoder.java  AndroidEncoder.java
jitsiandroid/src/main/java/org/jitsi/impl/neomedia/device/: AudioStreamUtils.java  MediaRecorderSystem.java
jitsiandroid/src/main/java/org/jitsi/impl/neomedia/device/util/: PreviewSurfaceProvider.java
jitsiandroid/src/main/java/org/jitsi/impl/neomedia/jmfext/media/protocol/androidcamera/: SurfaceStream.java
jitsiandroid/src/main/java/org/jitsi/impl/neomedia/jmfext/media/protocol/audiorecord/: DataSource.java
jitsiandroid/src/main/java/org/jitsi/impl/neomedia/jmfext/media/renderer/audio/: AudioTrackRenderer.java
jitsiandroid/src/main/res/values/: strings.xml
jnandroid/: README.md
jnandroid/jni/: Android.mk
jnandroid/src/main/: AndroidManifest.xml
jnffmpeg/: .gitignore  README.md  build.gradle
jnffmpeg/jni/: Android.mk
jnffmpeg/src/main/: AndroidManifest.xml
jng722/: .gitignore  README.md
jng722/jni/: Android.mk  Application.mk
jng722/src/main/: AndroidManifest.xml
jnidispatch/: README.md
jnidispatch/jni/: Android.mk
jnidispatch/src/main/: AndroidManifest.xml
jnopus/: .gitignore  README.md
jnopus/jni/: Android.mk
jnopus/src/main/: AndroidManifest.xml
jnspeex/: .gitignore  README.md  build.gradle
jnspeex/jni/: Android.mk
jnspeex/src/main/: AndroidManifest.xml
jnvpx/: .gitignore  README.md  build.gradle  local.properties
jnvpx/armeabi-v7a/: Android.mk  vp9_rtcd.h  vpx_config.asm  vpx_dsp_rtcd.h
jnvpx/jni/: Android.mk  stubs.c
jnvpx/src/main/: AndroidManifest.xml
jnvpx/src/main/res/values/: strings.xml
jnvpx/src/test/java/my/myusri/libvpx/: ExampleUnitTest.java
jnvpx/x86/: Android.mk  vp8_rtcd.h  vp9_rtcd.h  vpx_config.asm  vpx_dsp_rtcd.h  vpx_version.h
txApp/: .gitignore  CMakeLists.txt  build.gradle  proguard-multidex.pro
txApp/src/androidTest/java/my/myusri/jitu/: ExampleInstrumentedTest.java
txApp/src/main/: AndroidManifest.xml
txApp/src/main/java/my/myusri/jitu/: JituApplication.java  JituService.java  MainActivity.java
txApp/src/main/java/org/jitsi/android/: JitsiApplication.java
txApp/src/main/java/org/jitsi/android/gui/util/: AndroidUtils.java
txApp/src/main/java/org/jitsi/examples/: AVTransmit2.java
txApp/src/main/java/org/jitsi/impl/neomedia/device/util/: AndroidCamera.java  ViewDependentProvider.java
txApp/src/main/java/org/jitsi/impl/neomedia/jmfext/media/renderer/audio/: OpenSLESRenderer.java
txApp/src/main/jni/cmake/libopus/: CMakeLists.txt
txApp/src/main/jni/cmake/speex/: CMakeLists.txt
txApp/src/main/res/layout/: activity_main.xml
txApp/src/main/res/values/: strings.xml
txApp/src/main/resources/: jitsi-defaults.properties  jitsi.properties
txApp/src/test/java/my/myusri/jitu/: ExampleUnitTest.java
